docs:final_new_messages_section

--- a/docs/guidelines/language/messaging/non-critical-information-messages.mdx
+++ b/docs/guidelines/language/messaging/non-critical-information-messages.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_position: 8
+sidebar_position: 10
 sidebar_label: Non-critical information messages
 title: Non-critical information messages
 doc-type: 'banner'
@@ -13,7 +13,7 @@ description: Non-critical information messages come from the system and keep use
 
 ## General rules
 
-### Keep messages short and concise.
+Keep messages short and concise.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
@@ -27,7 +27,7 @@ description: Non-critical information messages come from the system and keep use
 </div>
 </div>
 
-### Use a professional, informative tone for routine updates and only include relevant information.
+Use a professional, informative tone for routine updates and only include relevant information.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
@@ -41,7 +41,7 @@ description: Non-critical information messages come from the system and keep use
 </div>
 </div>
 
-### Use clear timestamps for context, clarity, prioritization and record keeping.
+Use clear timestamps for context, clarity, prioritization and record keeping.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
@@ -57,9 +57,9 @@ description: Non-critical information messages come from the system and keep use
 
 <div className="dos-and-donts" markdown="true">
 <div className="donts" markdown="true">
-- Notification list:
-* Motor 3 overheating
-* Valve 7 malfunction
+- Notification list: <br/>
+Motor 3 overheating <br/>
+Valve 7 malfunction
 </div>
 </div>
 
@@ -75,7 +75,7 @@ description: Non-critical information messages come from the system and keep use
 </div>
 </div>
 
-### Avoid urgency wording as these types of notifications are typically not as critical as warnings.
+Avoid urgency wording as these types of notifications are typically not as critical as warnings.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
@@ -85,7 +85,7 @@ description: Non-critical information messages come from the system and keep use
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
-- System backup completed at 15:00
+- System backup completed at 15:00.
 </div>
 </div>
 
@@ -95,7 +95,7 @@ description: Non-critical information messages come from the system and keep use
 </div>
 </div>
 
-### Avoid adding user actions when possible as these notifications should not impact the user workflow.
+Avoid adding user actions when possible as these notifications should not impact the user workflow.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
@@ -109,7 +109,7 @@ description: Non-critical information messages come from the system and keep use
 </div>
 </div>
 
-### Use sentence casing to align with our UX writing guidelines
+Use sentence casing to align with our UX writing guidelines.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
@@ -123,7 +123,7 @@ description: Non-critical information messages come from the system and keep use
 </div>
 </div>
 
-### Use minimal punctuation to keep notifications easy to read and without clutter or cognitive overload.
+Use minimal punctuation to keep notifications easy to read and without clutter or cognitive overload.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
@@ -133,20 +133,17 @@ description: Non-critical information messages come from the system and keep use
 
 <div className="dos-and-donts" markdown="true">
 <div className="donts" markdown="true">
-- Notification: System update! Line: 4 / Starts: 14:00 (2pm).
+- Notification: System update! Line: 4 / Starts: 14:00.
 </div>
 </div>
 
-### Use industrial icons only when absolutely necessary and avoid emojis.
+Use industrial icons only when absolutely necessary and avoid emojis.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
 - Line 3 shift schedule changed. See what's new.
 </div>
-</div>
-
-<div classNameName="dos-and-donts" markdown="true">
-<div classNameName="donts" markdown="true">
+<div className="donts" markdown="true">
 - 🔄 Line 3 shift schedule updated. 👉 See what’s new.
 </div>
 </div>
@@ -160,3 +157,7 @@ description: Non-critical information messages come from the system and keep use
 
 ## Related
 
+Tooltips
+Infotips
+Message bar
+Toast messages 
