--- a/docs/guidelines/language/messaging/progress-updates.mdx
+++ b/docs/guidelines/language/messaging/progress-updates.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_position: 6
+sidebar_position: 8
 sidebar_label: Progress updates
 title: Progress updates
 doc-type: 'banner'
@@ -8,9 +8,11 @@ no_single_tab: true
 description: While some companies use humorous text like "Chopping the onions…" or "Gathering your dragons…" to give users progress updates, our messages are straightforward and professional, such as "Loading…", "Saving…", or "Processing…" alongside visual indicators.
 
 ---
-#
+# 
 
-## Use sentence case to align with our UX writing guidelines.
+## General rules
+
+Use sentence case to align with our UX writing guidelines.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
@@ -21,7 +23,7 @@ description: While some companies use humorous text like "Chopping the onions…
 </div>
 </div>
 
-## Use the present simple progressive (continuous, -ing) verb form to indicate ongoing actions.
+Use the present simple progressive (continuous, -ing) verb form to indicate ongoing actions.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
@@ -38,7 +40,7 @@ description: While some companies use humorous text like "Chopping the onions…
 </div>
 </div>
 
-## Use verbs before nouns to focus on the action and make messages easier to scan.
+Use verbs before nouns to focus on the action and make messages easier to scan.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
@@ -49,8 +51,7 @@ description: While some companies use humorous text like "Chopping the onions…
 </div>
 </div>
 
-## Use horizontal ellipses (…) after the verb without a space.
-## Use the Unicode (U+2026) instead of adding three full stops (Mac Option+/Windows ALT+0133).
+Use horizontal ellipses (…) after the verb without a space instead of adding three full stops (unicode U+2026, Mac Option+/Windows ALT+0133).
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
@@ -62,7 +63,7 @@ description: While some companies use humorous text like "Chopping the onions…
 </div>
 </div>
 
-## Use ellipses for text with numbers or the object to show a running process.
+Use ellipses for text with numbers or the object to show a running process.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
@@ -77,7 +78,7 @@ description: While some companies use humorous text like "Chopping the onions…
 </div>
 </div>
 
-## Avoid ellipses to show time remaining and approximate or unknown times as they're status indicators, not actions.
+Avoid ellipses to show time remaining and approximate or unknown times as they're status indicators, not actions.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
@@ -90,7 +91,7 @@ description: While some companies use humorous text like "Chopping the onions…
 </div>
 </div>
 
-## Change verb form without ellipses when possible in buttons with loading spinners to avoid visual clutter.
+Change verb form without ellipses when possible in buttons with loading spinners to avoid visual clutter.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
@@ -101,7 +102,18 @@ description: While some companies use humorous text like "Chopping the onions…
 </div>
 </div>
 
-## Use specific and definitive text to make users aware of what is happening and how long the process takes.
+Use the correct verb form without using ellipses to show background processes. 
+ 
+ <div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
+- Download → Downloading → Downloaded
+</div>
+<div className="donts" markdown="true">
+- Download → Downloading… → Downloaded
+</div>
+</div>
+
+Use specific and definitive text to make users aware of what is happening and how long the process takes.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
@@ -114,7 +126,7 @@ description: While some companies use humorous text like "Chopping the onions…
 </div>
 </div>
 
-## Use informative text and actions when multiple processes are happening at the same time.
+Use informative text and actions when multiple processes are happening at the same time.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
@@ -126,7 +138,7 @@ description: While some companies use humorous text like "Chopping the onions…
 </div>
 </div>
 
-## Use transitional text to manage user expectations and reduce frustration for lengthy processes.
+Use transitional text to manage user expectations and reduce frustration for lengthy processes.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
@@ -143,3 +155,7 @@ description: While some companies use humorous text like "Chopping the onions…
 * Don’t use vague phrases like: "Please wait."
 
 ## Related
+
+Loading indicators 
+Punctuation
+Grammar 
