--- a/docs/guidelines/language/messaging/time-related-messages.mdx
+++ b/docs/guidelines/language/messaging/time-related-messages.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_position: 7
+sidebar_position: 9
 sidebar_label: Time-related messages
 title: Time-related messages
 doc-type: 'banner'
@@ -12,21 +12,18 @@ description: Time-related messages help users understand how long processes take
 
 ## Rules for known time frames
 
-### Use a specific time or time frame whenever possible.
+Use a specific time or time frame whenever possible.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
 - System update on Monday, August 22, 2025: 06:00–08:00
 </div>
-</div>
-
-<div className="dos-and-donts" markdown="true">
 <div className="donts" markdown="true">
 - Upcoming system update: 22 August
 </div>
 </div>
 
-### Use the user’s time zone when providing any kind of time indication.
+Use the user’s time zone when providing any kind of time indication.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
@@ -40,7 +37,7 @@ description: Time-related messages help users understand how long processes take
 </div>
 </div>
 
-### When necessary, add time zones with the UTC in brackets.
+When necessary, add time zones with the UTC in brackets.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
@@ -54,54 +51,33 @@ description: Time-related messages help users understand how long processes take
 </div>
 </div>
 
-### Avoid generic time-related terms like later, soon, sometime, etc.
+Avoid generic time-related terms like later, soon, sometime, etc.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
 - Update starts Tuesday, October 1, 2026: 02:00–04:00
 </div>
-</div>
-
-<div className="dos-and-donts" markdown="true">
 <div className="donts" markdown="true">
 - Update starts soon.
-</div>
-</div>
-
-<div className="dos-and-donts" markdown="true">
-<div className="donts" markdown="true">
 - Update starts later today.
-</div>
-</div>
-
-<div className="dos-and-donts" markdown="true">
-<div className="donts" markdown="true">
 - Update takes a few moments.
-</div>
-</div>
-
-<div className="dos-and-donts" markdown="true">
-<div className="donts" markdown="true">
 - Update takes a while.
 </div>
 </div>
 
-### Use "will" to indicate certainty and avoid "may" or "might" which sound uncertain.
+Use "will" to indicate certainty and avoid "may" or "might" which sound uncertain.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
 - Update will take a few minutes.
 </div>
-</div>
-
-<div className="dos-and-donts" markdown="true">
 <div className="donts" markdown="true">
 - Update may take a few minutes.
 - Update might take a few minutes.
 </div>
 </div>
 
-### Avoid adding messages when the process takes less than ten seconds.
+Avoid adding messages when the process takes less than ten seconds.
 
 <div className="dos-and-donts" markdown="true">
 <div className="donts" markdown="true">
@@ -109,7 +85,7 @@ description: Time-related messages help users understand how long processes take
 </div>
 </div>
 
-### Use countdowns to alert users to time-sensitive information.
+Use countdowns to alert users to time-sensitive information.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
@@ -117,15 +93,12 @@ description: Time-related messages help users understand how long processes take
 - Automatic logout in 03:45 minutes.
 - Meeting starts in 5 minutes.
 </div>
-</div>
-
-<div className="dos-and-donts" markdown="true">
 <div className="donts" markdown="true">
 - Migration starts in 1 hour.
 </div>
 </div>
 
-### Use consistent wording from the UI and add specific volumes with progress indicators.
+Use consistent wording from the UI and add specific volumes with progress indicators.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
@@ -137,7 +110,7 @@ description: Time-related messages help users understand how long processes take
 
 ## Rules for unknown time frames
 
-### Use a realistic time range or an estimated time window if possible.
+Use a realistic time range or an estimated time window if possible.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
@@ -151,15 +124,13 @@ description: Time-related messages help users understand how long processes take
 </div>
 </div>
 
-### Be transparent and use passive voice when you need to be unspecific.
+Be transparent and use passive voice when you need to be unspecific.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
 - Due to the size of the data migration, it is estimated to take between 4-6 hours.
 - Data is being fetched from multiple sources, and the completion time varies depending on system conditions.
 </div>
-</div>
-<div className="dos-and-donts" markdown="true">
 <div className="donts" markdown="true">
 - Due to the size of the migration, we have no idea when it will finish.
 </div>
@@ -167,7 +138,7 @@ description: Time-related messages help users understand how long processes take
 
 ## Rules for expectations and consequences
 
-### Inform users whether or not they can continue working during a process.
+Inform users whether or not they can continue working during a process.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
@@ -178,7 +149,7 @@ description: Time-related messages help users understand how long processes take
 </div>
 </div>
 
-### Clearly communicate any consequences related to user actions (or inaction).
+Clearly communicate any consequences related to user actions (or inaction).
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
@@ -190,7 +161,7 @@ description: Time-related messages help users understand how long processes take
 </div>
 </div>
 
-### Provide clear, actionable choices for next steps and user autonomy.
+Provide clear, actionable choices for next steps and user autonomy.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
@@ -210,3 +181,7 @@ description: Time-related messages help users understand how long processes take
 * Don’t guess unknown time frames
 
 ## Related
+
+Time and time zones 
+Punctuation 
+Progress updates 
