--- a/docs/guidelines/language/messaging/warning-messages.mdx
+++ b/docs/guidelines/language/messaging/warning-messages.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_position: 2
+sidebar_position: 3
 sidebar_label: Warning messages
 title: Warning messages
 doc-type: 'banner'
@@ -16,13 +16,13 @@ We follow this three-step approach when creating our warning messages. This ensu
 
 | Step | Purpose | Description | Example |
 |------|---------|-------------|---------|
-| **1. Heading** | What? | Explain why the warning has been triggered. | Reset device |
-| **2. Description** | Why? | Provide context to help users understand the consequences of ignoring the warning. | A reset restores the device to its factory settings, deleting all applications and user data. This action cannot be undone. |
-| **3. Instructions** | How? | Explain how users can avoid these consequences and find solutions with links, buttons and suggestions. | Reset Cancel
+| 1. | Heading | Explain why the warning has been triggered. | Reset device |
+| 2. | Description  | Provide context to help users understand the consequences of ignoring the warning. | A reset restores the device to its factory settings, deleting all applications and user data. This action cannot be undone. |
+| 3.  | Instructions| Explain how users can avoid these consequences and find solutions with links, buttons and suggestions. | Reset  <br/> Cancel
 
 ## General rules
 
-### Use warning messages only when an action or awareness is genuinely needed.
+Use warning messages only when an action or awareness is genuinely needed.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
@@ -30,21 +30,18 @@ We follow this three-step approach when creating our warning messages. This ensu
 </div>
 </div>
 
-### Use clear, understandable titles and avoid generic warning messages.
+Use clear, understandable titles and avoid generic warning messages.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
 - Temperature approaching 30°
 </div>
-</div>
-
-<div className="dos-and-donts" markdown="true">
 <div className="donts" markdown="true">
 - Temperature warning
 </div>
 </div>
 
-### Provide specific and clear consequences and solutions.
+Provide specific and clear consequences and solutions.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
@@ -61,7 +58,7 @@ Button: Cancel
 </div>
 </div>
 
-### Avoid using words like "may", "might" or "possibly will" when explaining problems.
+Avoid using words like "may", "might" or "possibly will" when explaining problems.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
@@ -72,7 +69,7 @@ Button: Cancel
 </div>
 </div>
 
-### Include links to help pages or troubleshooting steps to avoid the consequences when possible.
+Include links to help pages or troubleshooting steps to avoid the consequences when possible.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
@@ -91,7 +88,7 @@ Button: Open access logs
 </div>
 </div>
 
-### Avoid repeating your message in both the heading and description.
+Avoid repeating your message in both the heading and description.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
@@ -104,7 +101,7 @@ Description: Pressure in Tank B approaching limit so initiate release protocol.
 </div>
 </div>
 
-### Avoid asking "Are you sure?" as this is vague, has no context, consequences and causes hesitation.
+Avoid asking "Are you sure?" as this is vague, has no context, consequences and causes hesitation.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
@@ -115,11 +112,11 @@ Description: Pressure in Tank B approaching limit so initiate release protocol.
 </div>
 </div>
 
-### Use clear, urgent wording for irreversible actions.
+Use clear, urgent wording for irreversible actions.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
-- Title: Reset device<br/>
+- Heading: Reset device<br/>
 Description: A reset restores the device to its factory settings, deleting all applications and user data. This action cannot be undone.<br/>
 Button: Reset<br/>
 Button: Cancel
@@ -129,7 +126,7 @@ Button: Cancel
 </div>
 </div>
 
-### Avoid using all uppercase text as it can be difficult to read and may seem like we’re shouting.
+Avoid using all uppercase text as it can be difficult to read and may seem like we’re shouting.
 
 <div className="dos-and-donts" markdown="true">
 <div className="donts" markdown="true">
