--- a/docs/guidelines/language/messaging/empty-state-messages.mdx
+++ b/docs/guidelines/language/messaging/empty-state-messages.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_position: 3
+sidebar_position: 4
 sidebar_label: Empty-state messages
 title: Empty-state messages
 doc-type: 'banner'
@@ -61,7 +61,7 @@ Use neutral framing of the empty state and avoid making it seem like a user fail
 </div>
 </div>
 
-Avoid “yet” or other expectation-related terms in titles.
+Avoid “yet” or other expectation-related terms in headings.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
@@ -69,7 +69,7 @@ Avoid “yet” or other expectation-related terms in titles.
 </div>
 
 <div className="donts" markdown="true">
-- Title: No users added yet
+- Heading: No users added yet
 </div>
 </div>
 
@@ -83,6 +83,6 @@ Avoid “yet” or other expectation-related terms in titles.
 ## Related
 
 * [Icon usage](https://ix.siemens.io/docs/icons/icon-usage#status-icons)
-* [Error messages](#)
-* [Warning messages](#)
-* [Non-critical information messages](#)
+* Error messages
+* Warning messages
+* Non-critical information messages
