--- a/docs/guidelines/language/messaging/error-messages-new.mdx
+++ b/docs/guidelines/language/messaging/error-messages-new.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_position: 1
+sidebar_position: 2
 sidebar_label: Error messages
 title: Error messages
 doc-type: 'banner'
@@ -35,24 +35,17 @@ Instructions: Check sensor / Open sensor management
  </div>
 </div>
 
-Avoid generic error messages or codes; instead provide specific data, value and solutions.
+Avoid generic error messages or codes, instead provide specific data, value and solutions.
 
 <div className="dos-and-donts" markdown="true">
- <div className="dos" markdown="true">
+<div className="dos" markdown="true">
 - Failed to export data due to a connection error.
- </div>
-
- <div className="donts" markdown="true">
-- Something happened.
- </div>
-
- <div className="donts" markdown="true">
-- An error occurred.
- </div>
-
+</div>
 <div className="donts" markdown="true">
+- Something happened.
+- An error occurred.
 - Error 172.00046ERR
- </div>
+</div>
 </div>
 <br/>
 
@@ -82,17 +75,17 @@ Avoid repeating your message in both the title and description.
  </div>
 </div>
 <br/>
-Avoid blaming the user with “you” and “your” — use passive voice as an exception.
+Avoid blaming the user with “you” and “your” and use passive voice as an exception.
 <div className="dos-and-donts" markdown="true">
  <div className="dos" markdown="true">
-- Value out of range. Enter a number between 1 and 100.
+- Device could not be deleted. 
  </div>
 
  <div className="dos" markdown="true">
 - Failed to delete device.
  </div>
 
- <div class="donts" markdown="true">
+ <div className="donts" markdown="true">
 - You have failed to delete the device.
  </div>
 </div>
@@ -105,20 +98,20 @@ Provide specific and clear solutions to avoid making assumptions about user know
 - Unsupported file type. Upload supported file types: .pdf and .docx.
  </div>
 
- <div class="donts" markdown="true">
-- Unsupported file type. Upload supported file type.
+ <div className="donts" markdown="true">
+- Unsupported file type. Upload the supported and correct file type.
  </div>
 </div>
 <br/>
 
-If the error is our responsibility and fault, use authentic and transparent apologies (say “sorry”)
+If the error is our responsibility and fault, use authentic and transparent apologies.
 
 <div className="dos-and-donts" markdown="true">
  <div className="dos" markdown="true">
-- Sorry, we’ve moved this page. Please check the changelog for the new location.
+- We’ve moved this page. Please check the changelog for the new location.
  </div>
 
- <div class="donts" markdown="true">
+ <div className="donts" markdown="true">
 - Sorry you entered the wrong address.
  </div>
 </div>
@@ -167,7 +160,7 @@ Use softening words, i.e. unfortunately and avoid negative contractions (“do n
 - You don’t have access.
  </div>
 
- <div class="donts" markdown="true">
+ <div className="donts" markdown="true">
 - You can’t open this page.
  </div>
 </div>
@@ -180,7 +173,7 @@ Be honest and transparent when you cannot explain the error or how to move the u
 - Something went wrong and we couldn't complete your request. Try again later.
  </div>
 
- <div class="donts" markdown="true">
+ <div className="donts" markdown="true">
 - Operation stopped for unknown reason.
  </div>
 </div>
@@ -195,7 +188,7 @@ Avoid generic wording telling users to contact their admin or support as this is
  <div className="dos" markdown="true">
 - Send error log to administrator.
  </div>
- <div class="donts" markdown="true">
+ <div className="donts" markdown="true">
 - Contact admin to solve this issue.
  </div>
 </div>
@@ -204,7 +197,7 @@ Avoid generic wording telling users to contact their admin or support as this is
 Avoid overpromising solutions to errors unless the team is working on the problem.
 
 <div className="dos-and-donts" markdown="true">
- <div class="donts" markdown="true">
+ <div className="donts" markdown="true">
    - Our team is working overtime to fix this for you and it will be fixed by morning.
  </div>
 </div>
