--- a/docs/guidelines/language/messaging/infotips.mdx
+++ b/docs/guidelines/language/messaging/infotips.mdx
@@ -1,8 +1,8 @@
 ---
-sidebar_position: 4
+sidebar_position: 5
 sidebar_label: Infotips
 title: Infotips
-doc_type: 'banner'
+doc-type: 'banner'
 component-tabs: ['']
 no_single_tab: true
 description: 'Infotips are short, context-sensitive messages that appear near user interface elements to offer additional guidance or further context. Infotips or popovers are often triggered by clicking an information icon or expanding a section. For guidelines on validation and placeholder texts, see the password and logging in section.'
@@ -19,7 +19,7 @@ Use sentence case and end with a period (similar to tooltips).
  <div className="dos" markdown="true">
 - View the current status of the production line.
  </div>
- <div class="donts" markdown="true">
+ <div className="donts" markdown="true">
 - VIEW CURRENT STATUS OF PRODUCTION LINE
  </div>
 </div>
@@ -27,47 +27,46 @@ Use sentence case and end with a period (similar to tooltips).
 
 Use infotips to support users with guidance and contextual information.
 
-<div className="dos-and-donts" markdown="true">
- <div className="dos" markdown="true">
+<div className="dos" markdown="true">
 - Maximum allowable hydraulic pressure (bar).
- </div>
-<div class="dos" markdown="true">
+</div>
+
+<div className="dos" markdown="true">
 - Current motor load in percentage.
- </div>
- <div className="dos" markdown="true">
+</div>
+
+<div className="dos" markdown="true">
 - Enables automatic system recalibration.
- </div>
- <div className="dos" markdown="true">
- - Unique identifier for the production batch.
- </div>
+</div>
+
+<div className="dos" markdown="true">
+- Unique identifier for the production batch.
 </div>
 <br/>
 
 Use infotips to help users understand complex terminology.
 
-<div className="dos-and-donts" markdown="true">
- <div className="dos" markdown="true">
+<div className="dos" markdown="true">
 - SCADA System<br/>
 Supervisory Control and Data Acquisition: A system that monitors and controls industrial processes locally or at remote locations.
- </div>
+</div>
+
 <div className="dos" markdown="true">
 - PLC cycle time<br/>
 This indicates the time (in milliseconds) it takes for the Programmable Logic Controller to execute one full scan of its program logic.
- </div>
 </div>
 <br/>
 
 Use infotips to help users understand complex features.
 
-<div className="dos-and-donts" markdown="true">
- <div className="dos" markdown="true">
+<div className="dos" markdown="true">
 - Set thresholds<br/>
 Set project thresholds here. Adjust the value to trigger alerts when the temperature exceeds a specified limit (e.g. 80°C).
- </div>
+</div>
+
 <div className="dos" markdown="true">
 - PID controller tuning<br/>
 Adjust these parameters (Proportional, Integral, Derivative) to optimize the system's response to errors and achieve stable control.
- </div>
 </div>
 <br/>
 
@@ -96,20 +95,19 @@ Button: Open meter list
 
 Use imperative verbs (commands) for instructions and guidance.
 
-<div className="dos-and-donts" markdown="true">
- <div class="dos" markdown="true">
+<div className="dos" markdown="true">
 - Assign a unique identifier to each physical asset for tracking, maintenance scheduling, and inventory management.
- </div>
+</div>
+
 <div className="dos" markdown="true">
 - Define and manage sequences of operations and ingredient quantities for automated production processes.
- </div>
 </div>
 <br/>
 
 Avoid personal pronouns (you, we, our, etc.).
 
 <div className="dos-and-donts" markdown="true">
- <div class="dos" markdown="true">
+ <div className="dos" markdown="true">
 - Select a device from the network to begin configuration.
  </div>
 
