--- a/docs/guidelines/language/messaging/tooltips.mdx
+++ b/docs/guidelines/language/messaging/tooltips.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_position: 5
+sidebar_position: 6
 sidebar_label: Tooltips
 title: Tooltips
 doc-type: 'banner'
@@ -16,7 +16,7 @@ import { iconEditDocument } from "@siemens/ix-icons/icons";
 
 ## General rules
 
-### Use tooltips to define icons and show control names.
+Use tooltips to define icons and show control names.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
@@ -26,99 +26,75 @@ import { iconEditDocument } from "@siemens/ix-icons/icons";
 </div>
 </div>
 
-### Avoid punctuation or periods for tool names or icons.
+Avoid punctuation or periods for tool names or icons.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
 - Edit
-</div>
-</div>
-
-<div className="dos-and-donts" markdown="true">
-<div className="donts" markdown="true">
-- Edit.
-</div>
-</div>
-
-<div className="dos-and-donts" markdown="true">
-<div className="dos" markdown="true">
 - Open file
 </div>
-</div>
-
-<div className="dos-and-donts" markdown="true">
 <div className="donts" markdown="true">
+- Edit.
 - Open file.
 </div>
 </div>
 
-### Use sentence case and a period if the tooltip is a complete sentence or multiple sentences.
+
+Use sentence case and a period if the tooltip is a complete sentence or multiple sentences.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
 - Add users to project.
 </div>
-</div>
-
-<div className="dos-and-donts" markdown="true">
 <div className="donts" markdown="true">
 - Add new users to project
 </div>
 </div>
 
-### Use verbs to start your tooltip and avoid passive voice.
+Use verbs to start your tooltip and avoid passive voice.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
 - Create KPI tables.
 </div>
-</div>
-
-<div className="dos-and-donts" markdown="true">
 <div className="donts" markdown="true">
 - Tables are created.
 </div>
 </div>
 
-### Avoid complicated sentence constructions, e.g. no relative clauses.
+Avoid complicated sentence constructions, e.g. no relative clauses.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
 - Share with team members.
 </div>
-</div>
-
-<div className="dos-and-donts" markdown="true">
 <div className="donts" markdown="true">
 - Projects can be shared with team members who work with you.
 </div>
 </div>
 
-### Use a heading with a short description for longer tooltips.
+Use a heading with a short description for longer tooltips.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
-- Cycle time input<br/>
-Set the duration of each production cycle in seconds.
+- Heading: Cycle time input<br/>
+Description: Set the duration of each production cycle in seconds.
 </div>
 </div>
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
-- Log history<br/>
-View historical logs of machine activity and operator actions.
+- Heading: Log history<br/>
+Description: View historical logs of machine activity and operator actions.
 </div>
 </div>
 
-### Avoid repeating text already visible and readable on the screen.
+Avoid repeating text already visible and readable on the screen.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
 - Edit (as icon<IxIcon name={iconEditDocument} size="16"></IxIcon>) Tooltip: Edit
 </div>
-</div>
-
-<div className="dos-and-donts" markdown="true">
 <div className="donts" markdown="true">
 - Edit (as text) Tooltip: Edit
 </div>
@@ -129,7 +105,7 @@ View historical logs of machine activity and operator actions.
 * Do write tooltips to give more context about complex features
 * Do write tooltips to support beginners
 * Don’t use tooltips to convey lengthy or critical information
-* Don’t add irrelevant information; focus on context
+* Don’t add irrelevant information, instead focus on context
 
 ## Related
 
