docs:final_updates_messaging_section

--- a/docs/guidelines/language/messaging/error-messages-new.mdx
+++ b/docs/guidelines/language/messaging/error-messages-new.mdx
@@ -52,17 +52,13 @@ Avoid generic error messages or codes, instead provide specific data, value and 
 Give clear reasons for input validation errors to ease user frustration.
 
 <div className="dos-and-donts" markdown="true">
- <div className="dos" markdown="true">
-- Value out of range. Enter a number between 1 and 100.
- </div>
-
 <div className="dos" markdown="true">
+- Value out of range. Enter a number between 1 and 100.
 - Number between 1 and 100 required.
- </div>
-
- <div className="donts" markdown="true">
+</div>
+<div className="donts" markdown="true">
 - Invalid value.
- </div>
+</div>
 </div>
 <br/>
 Avoid repeating your message in both the title and description.
@@ -77,17 +73,13 @@ Avoid repeating your message in both the title and description.
 <br/>
 Avoid blaming the user with “you” and “your” and use passive voice as an exception.
 <div className="dos-and-donts" markdown="true">
- <div className="dos" markdown="true">
-- Device could not be deleted. 
- </div>
-
- <div className="dos" markdown="true">
+<div className="dos" markdown="true">
+- Device could not be deleted.
 - Failed to delete device.
- </div>
-
- <div className="donts" markdown="true">
+</div>
+<div className="donts" markdown="true">
 - You have failed to delete the device.
- </div>
+</div>
 </div>
 <br/>
 
@@ -152,17 +144,13 @@ Use positive framing and avoid negative and alarming words like “wrong” and 
 Use softening words, i.e. unfortunately and avoid negative contractions (“do not” instead of “don’t”).
 
 <div className="dos-and-donts" markdown="true">
- <div className="dos" markdown="true">
+<div className="dos" markdown="true">
 - Unfortunately, you cannot open this page.
- </div>
-
- <div className="donts" markdown="true">
-- You don’t have access.
- </div>
-
- <div className="donts" markdown="true">
-- You can’t open this page.
- </div>
+</div>
+<div className="donts" markdown="true">
+- You don't have access.
+- You can't open this page.
+</div>
 </div>
 <br/>
 
@@ -182,15 +170,13 @@ Be honest and transparent when you cannot explain the error or how to move the u
 Avoid generic wording telling users to contact their admin or support as this is unhelpful.
 
 <div className="dos-and-donts" markdown="true">
- <div className="dos" markdown="true">
+<div className="dos" markdown="true">
 - Open the chat window and paste the error into the input field for support.
- </div>
- <div className="dos" markdown="true">
 - Send error log to administrator.
- </div>
- <div className="donts" markdown="true">
+</div>
+<div className="donts" markdown="true">
 - Contact admin to solve this issue.
- </div>
+</div>
 </div>
 <br/>
 
