--- a/docs/guidelines/language/messaging/toast-messages.mdx
+++ b/docs/guidelines/language/messaging/toast-messages.mdx
@@ -20,11 +20,11 @@ Although always short, toast messages vary in length and complexity:
 * Two-line messages have a heading and description to provide more context or details.
 * Three-line messages include a heading, a description, and actions.
 
-| Step | Purpose | Description | Structure and examples |
+| Step | Purpose | Description | Examples |
 |------|---------|-------------|------------------------|
-| **1. Heading** | Tell users the exact outcome of their action (for system toast messages, see the status and event section). | One-line toast | Noun + simple past tense verb:<br/><br/>Data downloaded<br/>Asset deleted<br/>Device deleted<br/>Connection restored<br/>Scan cancelled<br/>Asset not offboarded |
-| **2. Description** | Provide additional, relevant information. | Two-line toast | Heading: Maintenance scheduled<br/>Description: Exchange filer in room 500 on August 10.<br/><br/>Heading: File 4a.ext not uploaded<br/>Description: File 4a.ext exceeds 25 MB |
-| **3. Action** | Give users the ability to undo the action or provide a link to further information. | Three-line toast | Action verb + noun:<br/><br/>Heading: Asset deleted<br/>Description: Asset 4a_203/22<br/>Action: Undo<br/><br/>Heading: Scan scheduled<br/>Description: Scan gateway ANC_GW February 12<br/>Action: Open schedule<br/><br/>Heading: Asset not onboarded<br/>Description: Failed to reach Asset 4a<br/>Action: Try again |
+| 1.  | Heading or one-line toast  | Tell users the exact outcome of their action (for system toast messages, see the status and event section). | Noun + simple past tense verb:<br/><br/>Data downloaded<br/>Asset deleted<br/>Device deleted<br/>Connection restored<br/>Scan cancelled<br/>Asset not offboarded |
+| 2.  | Description or two-line toast | Provide additional, relevant information.  | **Heading:** Maintenance scheduled<br/>**Description:** Exchange filer in room 500 on August 10.<br/><br/>**Heading:** File 4a.ext not uploaded<br/>**Description:** File 4a.ext exceeds 25 MB |
+| 3. | Actions | Give users the ability to undo the action or provide a link to further information. | Action verb + noun:<br/><br/>Heading: Asset deleted<br/>Description: Asset 4a_203/22<br/>Action: Undo<br/><br/>Heading: Scan scheduled<br/>Description: Scan gateway ANC_GW February 12<br/>Action: Open schedule<br/><br/>Heading: Asset not onboarded<br/>Description: Failed to reach Asset 4a<br/>Action: Try again |
 
 ## General rules
 
