--- a/docs/guidelines/language/messaging/infotips.mdx
+++ b/docs/guidelines/language/messaging/infotips.mdx
@@ -29,54 +29,53 @@ Use infotips to support users with guidance and contextual information.
 
 <div className="dos" markdown="true">
 - Maximum allowable hydraulic pressure (bar).
-</div>
-
-<div className="dos" markdown="true">
 - Current motor load in percentage.
-</div>
-
-<div className="dos" markdown="true">
 - Enables automatic system recalibration.
-</div>
-
-<div className="dos" markdown="true">
 - Unique identifier for the production batch.
 </div>
 <br/>
 
 Use infotips to help users understand complex terminology.
 
+<div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
 - SCADA System<br/>
 Supervisory Control and Data Acquisition: A system that monitors and controls industrial processes locally or at remote locations.
 </div>
+</div>
 
+<div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
 - PLC cycle time<br/>
 This indicates the time (in milliseconds) it takes for the Programmable Logic Controller to execute one full scan of its program logic.
+</div>
 </div>
 <br/>
 
 Use infotips to help users understand complex features.
 
+<div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
 - Set thresholds<br/>
 Set project thresholds here. Adjust the value to trigger alerts when the temperature exceeds a specified limit (e.g. 80°C).
 </div>
+</div>
 
+<div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
 - PID controller tuning<br/>
 Adjust these parameters (Proportional, Integral, Derivative) to optimize the system's response to errors and achieve stable control.
+</div>
 </div>
 <br/>
 
 Use infotips to help users understand complex workflows.
 
 <div className="dos-and-donts" markdown="true">
- <div className="dos" markdown="true">
+<div className="dos" markdown="true">
 - Schedule maintenance<br/>
 This workflow guides you through planning and assigning preventive maintenance tasks. First, select the asset, then define the task type, and finally set the recurrence schedule.
- </div>
+</div>
 </div>
 <br/>
 
@@ -95,12 +94,16 @@ Button: Open meter list
 
 Use imperative verbs (commands) for instructions and guidance.
 
+<div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
 - Assign a unique identifier to each physical asset for tracking, maintenance scheduling, and inventory management.
 </div>
+</div>
 
+<div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
 - Define and manage sequences of operations and ingredient quantities for automated production processes.
+</div>
 </div>
 <br/>
 
