docs:final_updates_messaging-section
Removed old pages, updated getting started page and added cross linking

--- a/docs/guidelines/language/messaging/non-critical-information-messages.mdx
+++ b/docs/guidelines/language/messaging/non-critical-information-messages.mdx
@@ -120,7 +120,6 @@ Use industrial icons only when absolutely necessary and avoid emojis.
 
 ## Related
 
-Tooltips
-Infotips
-Message bar
-Toast messages 
+* [Tooltips](./tooltips.mdx)
+* [Infotips](./infotips.mdx)
+* [Toast messages](./toast-messages.mdx) 
