--- a/docs/guidelines/language/messaging/progress-updates.mdx
+++ b/docs/guidelines/language/messaging/progress-updates.mdx
@@ -156,6 +156,5 @@ Use transitional text to manage user expectations and reduce frustration for len
 
 ## Related
 
-Loading indicators 
-Punctuation
-Grammar 
+* [Toast messages](./toast-messages.mdx)
+* [Time-related messages](./time-related-messages.mdx) 
