--- a/docs/guidelines/language/messaging/toast-messages.mdx
+++ b/docs/guidelines/language/messaging/toast-messages.mdx
@@ -131,6 +131,6 @@ Avoid using "successful" and "successfully" as this adds to the reading load and
 
 ## Related
 
-Error messages 
-Warning messages
-Progress updates 
+* [Error messages](./error-messages-new.mdx)
+* [Warning messages](./warning-messages.mdx)
+* [Progress updates](./progress-updates.mdx) 
