--- a/docs/guidelines/language/messaging/tooltips.mdx
+++ b/docs/guidelines/language/messaging/tooltips.mdx
@@ -78,12 +78,7 @@ Use a heading with a short description for longer tooltips.
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
 - Heading: Cycle time input<br/>
-Description: Set the duration of each production cycle in seconds.
-</div>
-</div>
-
-<div className="dos-and-donts" markdown="true">
-<div className="dos" markdown="true">
+Description: Set the duration of each production cycle in seconds.<br/>
 - Heading: Log history<br/>
 Description: View historical logs of machine activity and operator actions.
 </div>
@@ -109,4 +104,8 @@ Avoid repeating text already visible and readable on the screen.
 
 ## Related
 
+* [Toast messages](./toast-messages.mdx)
+* [Infotips (component)](https://ix.siemens.io/docs/components/tooltip/code#a11y)
+* [Non-critical information messages](./non-critical-information-messages.mdx)
+* [Messages overview](./messages-overview.md)
 
