--- a/docs/guidelines/language/messaging/empty-state-messages.mdx
+++ b/docs/guidelines/language/messaging/empty-state-messages.mdx
@@ -83,6 +83,6 @@ Avoid “yet” or other expectation-related terms in headings.
 ## Related
 
 * [Icon usage](https://ix.siemens.io/docs/icons/icon-usage#status-icons)
-* Error messages
-* Warning messages
-* Non-critical information messages
+* [Error messages](./error-messages-new.mdx)
+* [Warning messages](./warning-messages.mdx)
+* [Non-critical information messages](./non-critical-information-messages.mdx)
