--- a/docs/guidelines/language/messaging/infotips.mdx
+++ b/docs/guidelines/language/messaging/infotips.mdx
@@ -27,11 +27,13 @@ Use sentence case and end with a period (similar to tooltips).
 
 Use infotips to support users with guidance and contextual information.
 
+<div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
 - Maximum allowable hydraulic pressure (bar).
 - Current motor load in percentage.
 - Enables automatic system recalibration.
 - Unique identifier for the production batch.
+</div>
 </div>
 <br/>
 
@@ -40,12 +42,7 @@ Use infotips to help users understand complex terminology.
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
 - SCADA System<br/>
-Supervisory Control and Data Acquisition: A system that monitors and controls industrial processes locally or at remote locations.
-</div>
-</div>
-
-<div className="dos-and-donts" markdown="true">
-<div className="dos" markdown="true">
+Supervisory Control and Data Acquisition: A system that monitors and controls industrial processes locally or at remote locations. <br/>
 - PLC cycle time<br/>
 This indicates the time (in milliseconds) it takes for the Programmable Logic Controller to execute one full scan of its program logic.
 </div>
@@ -57,12 +54,7 @@ Use infotips to help users understand complex features.
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
 - Set thresholds<br/>
-Set project thresholds here. Adjust the value to trigger alerts when the temperature exceeds a specified limit (e.g. 80°C).
-</div>
-</div>
-
-<div className="dos-and-donts" markdown="true">
-<div className="dos" markdown="true">
+Set project thresholds here. Adjust the value to trigger alerts when the temperature exceeds a specified limit (e.g. 80°C).<br/>
 - PID controller tuning<br/>
 Adjust these parameters (Proportional, Integral, Derivative) to optimize the system's response to errors and achieve stable control.
 </div>
@@ -96,12 +88,7 @@ Use imperative verbs (commands) for instructions and guidance.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
-- Assign a unique identifier to each physical asset for tracking, maintenance scheduling, and inventory management.
-</div>
-</div>
-
-<div className="dos-and-donts" markdown="true">
-<div className="dos" markdown="true">
+- Assign a unique identifier to each physical asset for tracking, maintenance scheduling, and inventory management.<br/>
 - Define and manage sequences of operations and ingredient quantities for automated production processes.
 </div>
 </div>
