--- a/docs/guidelines/language/messaging/time-related-messages.mdx
+++ b/docs/guidelines/language/messaging/time-related-messages.mdx
@@ -182,6 +182,5 @@ Provide clear, actionable choices for next steps and user autonomy.
 
 ## Related
 
-Time and time zones 
-Punctuation 
-Progress updates 
+* [Progress updates](./progress-updates.mdx) 
+* [Time and time zones](https://ix.siemens.io/docs/guidelines/language/formatting/timezones)
