--- a/docs/guidelines/language/messaging/warning-messages.mdx
+++ b/docs/guidelines/language/messaging/warning-messages.mdx
@@ -144,3 +144,11 @@ Avoid using all uppercase text as it can be difficult to read and may seem like 
 
 ## Related
 
+* [Icon usage](https://ix.siemens.io/docs/icons/icon-usage)
+* [Non-critical information messages](./non-critical-information-messages.mdx)
+* [Error messages](./error-messages-new.mdx)
+* [Empty-state messages](./empty-state-messages.mdx)
+* [Form validation (component)](https://ix.siemens.io/docs/components/forms-validation/guide)
+* [Modal (component)](https://ix.siemens.io/docs/components/modal/code)
+* [Message bar (component)](https://ix.siemens.io/docs/components/messagebar/code)
+* [Toast (component)](https://ix.siemens.io/docs/components/toast/guide)
