doc/worked on Kathrins comments

--- a/docs/guidelines/language/messaging/time-related-messages.mdx
+++ b/docs/guidelines/language/messaging/time-related-messages.mdx
@@ -103,7 +103,7 @@ Use consistent wording from the UI and add specific volumes with progress indica
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
 - Data volume: 45/300 MB
-- Saving data...50 of 300 MB saved
+- Saving data… 50 of 300 MB saved
 - System update: 45% complete
 </div>
 </div>
@@ -182,5 +182,5 @@ Provide clear, actionable choices for next steps and user autonomy.
 
 ## Related
 
-* [Progress updates](./progress-updates.mdx) 
+* [Progress updates](./progress-updates.mdx)
 * [Time and time zones](https://ix.siemens.io/docs/guidelines/language/formatting/timezones)
