--- a/docs/guidelines/language/messaging/warning-messages.mdx
+++ b/docs/guidelines/language/messaging/warning-messages.mdx
@@ -149,6 +149,6 @@ Avoid using all uppercase text as it can be difficult to read and may seem like 
 * [Error messages](./error-messages-new.mdx)
 * [Empty-state messages](./empty-state-messages.mdx)
 * [Form validation (component)](https://ix.siemens.io/docs/components/forms-validation/guide)
-* [Modal (component)](https://ix.siemens.io/docs/components/modal/code)
+* [Message modal (component)](https://ix.siemens.io/docs/components/message-modal/guide)
 * [Message bar (component)](https://ix.siemens.io/docs/components/messagebar/code)
 * [Toast (component)](https://ix.siemens.io/docs/components/toast/guide)
