--- a/docs/guidelines/language/messaging/error-messages-new.mdx
+++ b/docs/guidelines/language/messaging/error-messages-new.mdx
@@ -47,7 +47,6 @@ Avoid generic error messages or codes, instead provide specific data, value and 
 - Error 172.00046ERR
 </div>
 </div>
-<br/>
 
 Give clear reasons for input validation errors to ease user frustration.
 
@@ -60,7 +59,7 @@ Give clear reasons for input validation errors to ease user frustration.
 - Invalid value.
 </div>
 </div>
-<br/>
+
 Avoid repeating your message in both the title and description.
 <div className="dos-and-donts" markdown="true">
  <div className="dos" markdown="true">
@@ -70,7 +69,7 @@ Avoid repeating your message in both the title and description.
 - Bad request. Sorry, bad request.
  </div>
 </div>
-<br/>
+
 Avoid blaming the user with “you” and “your” and use passive voice as an exception.
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
@@ -81,7 +80,7 @@ Avoid blaming the user with “you” and “your” and use passive voice as an
 - You have failed to delete the device.
 </div>
 </div>
-<br/>
+
 
 Provide specific and clear solutions to avoid making assumptions about user knowledge.
 
@@ -94,7 +93,7 @@ Provide specific and clear solutions to avoid making assumptions about user know
 - Unsupported file type. Upload the supported and correct file type.
  </div>
 </div>
-<br/>
+
 
 If the error is our responsibility and fault, use authentic and transparent apologies.
 
@@ -107,7 +106,6 @@ If the error is our responsibility and fault, use authentic and transparent apol
 - Sorry you entered the wrong address.
  </div>
 </div>
-<br/>
 
 Use “please” only for extra or unexpected user actions that correct system-caused disruptions.
 
@@ -126,7 +124,6 @@ Show urgency with wording, e.g. “immediately” if there are consequences from
 - Update your software version immediately to avoid losing data.
  </div>
 </div>
-<br/>
 
 Use positive framing and avoid negative and alarming words like “wrong” and “catastrophic”.
 
@@ -139,9 +136,8 @@ Use positive framing and avoid negative and alarming words like “wrong” and 
 - Wrong number.
  </div>
 </div>
-<br/>
 
-Use softening words, i.e. unfortunately and avoid negative contractions (“do not” instead of “don’t”).
+Use softening words, e.g. unfortunately and avoid negative contractions (“do not” instead of “don’t”).
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
@@ -152,7 +148,6 @@ Use softening words, i.e. unfortunately and avoid negative contractions (“do n
 - You can't open this page.
 </div>
 </div>
-<br/>
 
 Be honest and transparent when you cannot explain the error or how to move the user forward.
 
@@ -165,7 +160,6 @@ Be honest and transparent when you cannot explain the error or how to move the u
 - Operation stopped for unknown reason.
  </div>
 </div>
-<br/>
 
 Avoid generic wording telling users to contact their admin or support as this is unhelpful.
 
@@ -178,7 +172,6 @@ Avoid generic wording telling users to contact their admin or support as this is
 - Contact admin to solve this issue.
 </div>
 </div>
-<br/>
 
 Avoid overpromising solutions to errors unless the team is working on the problem.
 
