Apply suggestions from code review
Co-authored-by: Kathrin <123640803+kathrinschalber@users.noreply.github.com>

--- a/docs/guidelines/language/messaging/infotips.mdx
+++ b/docs/guidelines/language/messaging/infotips.mdx
@@ -45,8 +45,7 @@ Supervisory Control and Data Acquisition: A system that monitors and controls in
 This indicates the time (in milliseconds) it takes for the Programmable Logic Controller to execute one full scan of its program logic.
 </div>
 </div>
-
-Use infotips to help users understand complex features.
+Use infotips to help users understand complex features and workflows.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
@@ -54,17 +53,11 @@ Use infotips to help users understand complex features.
 Set project thresholds here. Adjust the value to trigger alerts when the temperature exceeds a specified limit (e.g. 80°C).<br/>
 - PID controller tuning<br/>
 Adjust these parameters (Proportional, Integral, Derivative) to optimize the system's response to errors and achieve stable control.
-</div>
-</div>
-
-Use infotips to help users understand complex workflows.
-
-<div className="dos-and-donts" markdown="true">
-<div className="dos" markdown="true">
 - Schedule maintenance<br/>
 This workflow guides you through planning and assigning preventive maintenance tasks. First, select the asset, then define the task type, and finally set the recurrence schedule.
 </div>
 </div>
+<br/>
 
 Use paragraphs to split complex information and use bullet points or lists for clarity.
 
