--- a/docs/guidelines/language/messaging/time-related-messages.mdx
+++ b/docs/guidelines/language/messaging/time-related-messages.mdx
@@ -98,7 +98,7 @@ Use countdowns to alert users to time-sensitive information.
 </div>
 </div>
 
-Use consistent wording from the UI and add specific volumes with progress indicators.
+Use consistent wording in the UI and add specific volumes with progress indicators.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
