--- a/docs/guidelines/language/messaging/tooltips.mdx
+++ b/docs/guidelines/language/messaging/tooltips.mdx
@@ -88,10 +88,10 @@ Avoid repeating text already visible and readable on the screen.
 
 <div className="dos-and-donts" markdown="true">
 <div className="dos" markdown="true">
-- Edit (as icon<IxIcon name={iconEditDocument} size="16"></IxIcon>) Tooltip: Edit
+- Edit (as icon<IxIcon name={iconEditDocument} size="16"></IxIcon>) <br/>Tooltip: Edit
 </div>
 <div className="donts" markdown="true">
-- Edit (as text) Tooltip: Edit
+- Edit (as text) <br/>Tooltip: Edit
 </div>
 </div>
 
