--- a/docs/guidelines/language/messaging/warning-messages.mdx
+++ b/docs/guidelines/language/messaging/warning-messages.mdx
@@ -18,7 +18,7 @@ We follow this three-step approach when creating our warning messages. This ensu
 |------|---------|-------------|---------|
 | 1. | Heading | Explain why the warning has been triggered. | Reset device |
 | 2. | Description  | Provide context to help users understand the consequences of ignoring the warning. | A reset restores the device to its factory settings, deleting all applications and user data. This action cannot be undone. |
-| 3.  | Instructions| Explain how users can avoid these consequences and find solutions with links, buttons and suggestions. | Reset  <br/> Cancel
+| 3.  | Instructions | Explain how users can avoid these consequences and find solutions with links, buttons and suggestions. | Reset  <br/> Cancel |
 
 ## General rules
 
