updated with relative links

--- a/docs/guidelines/language/messaging/empty-state-messages.mdx
+++ b/docs/guidelines/language/messaging/empty-state-messages.mdx
@@ -82,7 +82,7 @@ Avoid “yet” or other expectation-related terms in headings.
 
 ## Related
 
-* [Icon usage](https://ix.siemens.io/docs/icons/icon-usage#status-icons)
+* [Icon usage](../../../icons/icon-usage.mdx)
 * [Error messages](./error-messages-new.mdx)
 * [Warning messages](./warning-messages.mdx)
 * [Non-critical information messages](./non-critical-information-messages.mdx)
