--- a/docs/guidelines/language/messaging/error-messages.mdx
+++ b/docs/guidelines/language/messaging/error-messages.mdx
@@ -194,7 +194,7 @@ Avoid overpromising solutions to errors unless the team is working on the proble
 
 ## Related
 
-* [Icon usage](https://ix.siemens.io/docs/icons/icon-usage#status-icons)
+* [Icon usage](../../../icons/icon-usage.mdx)
 * [Warning messages]
 * [Non-critical information messages]
 * [Error pages]
