--- a/docs/guidelines/language/messaging/warning-messages.mdx
+++ b/docs/guidelines/language/messaging/warning-messages.mdx
@@ -144,11 +144,11 @@ Avoid using all uppercase text as it can be difficult to read and may seem like 
 
 ## Related
 
-* [Icon usage](https://ix.siemens.io/docs/icons/icon-usage)
+* [Icon usage](../../../icons/icon-usage.mdx)
 * [Non-critical information messages](./non-critical-information-messages.mdx)
-* [Error messages](./error-messages-new.mdx)
+* [Error messages](./error-messages.mdx)
 * [Empty-state messages](./empty-state-messages.mdx)
-* [Form validation (component)](https://ix.siemens.io/docs/components/forms-validation/guide)
-* [Message modal (component)](https://ix.siemens.io/docs/components/message-modal/guide)
-* [Message bar (component)](https://ix.siemens.io/docs/components/messagebar/code)
-* [Toast (component)](https://ix.siemens.io/docs/components/toast/guide)
+* [Form validation (component)](../../../components/forms-validation/guide.md)
+* [Message modal (component)](../../../components/message-modal/guide.md)
+* [Message bar (component)](../../../components/messagebar/code.md)
+* [Toast (component)](../../../components/toast/guide.md)
