updated failed build

--- a/docs/guidelines/language/messaging/empty-state-messages.mdx
+++ b/docs/guidelines/language/messaging/empty-state-messages.mdx
@@ -83,6 +83,6 @@ Avoid “yet” or other expectation-related terms in headings.
 ## Related
 
 * [Icon usage](../../../icons/icon-usage.mdx)
-* [Error messages](./error-messages-new.mdx)
+* [Error messages](./error-messages.mdx)
 * [Warning messages](./warning-messages.mdx)
 * [Non-critical information messages](./non-critical-information-messages.mdx)
