--- a/docs/guidelines/language/messaging/warning-messages.mdx
+++ b/docs/guidelines/language/messaging/warning-messages.mdx
@@ -150,5 +150,5 @@ Avoid using all uppercase text as it can be difficult to read and may seem like 
 * [Empty-state messages](./empty-state-messages.mdx)
 * [Form validation (component)](../../../components/forms-validation/guide.md)
 * [Message modal (component)](../../../components/message-modal/guide.md)
-* [Message bar (component)](../../../components/messagebar/code.md)
+* [Message bar (component)](../../../components/messagebar/code.mdx)
 * [Toast (component)](../../../components/toast/guide.md)
