final updates messages

--- a/docs/components/tooltip/uxwriting.mdx
+++ b/docs/components/tooltip/uxwriting.mdx
@@ -3,6 +3,6 @@ doc-type: 'tab-item'
 ---
 import TooltipContent from '@site/docs/guidelines/language/messaging/tooltips.mdx';
 
-# Tooltip - UX Writing
+# Tooltip - Language
 
 <TooltipContent />
