--- a/docs/guidelines/language/messaging/error-messages.mdx
+++ b/docs/guidelines/language/messaging/error-messages.mdx
@@ -195,11 +195,7 @@ Avoid overpromising solutions to errors unless the team is working on the proble
 ## Related
 
 * [Icon usage](../../../icons/icon-usage.mdx)
-* [Warning messages]
-* [Non-critical information messages]
-* [Error pages]
-* [Empty-state messages]
-* [Form validation]
-* [Message bar]
-* [Toast messages]
-
+* [Warning messages](./warning-messages.mdx)
+* [Empty-state messages](./empty-state-messages.mdx)
+* [Form validation](../../../components/forms-validation/code.mdx)
+* [Message bar](../../../components/messagebar/code.mdx)
