--- a/docs/guidelines/language/messaging/infotips.mdx
+++ b/docs/guidelines/language/messaging/infotips.mdx
@@ -101,5 +101,5 @@ Avoid personal pronouns (you, we, our, etc.).
 
 ## Related
 
-* [Popover](#)
-* [Tooltips](#)
+* [Popover](../../../components/popover-news/code.mdx)
+* [Tooltips](./tooltips.mdx)
