--- a/docs/guidelines/language/messaging/time-related-messages.mdx
+++ b/docs/guidelines/language/messaging/time-related-messages.mdx
@@ -168,4 +168,4 @@ Provide clear, actionable choices for next steps and user autonomy.
 ## Related
 
 * [Progress updates](./progress-updates.mdx)
-* [Time and time zones](https://ix.siemens.io/docs/guidelines/language/formatting/timezones)
+* [Time and time zones](../formatting/timezones.mdx)
