--- a/docs/guidelines/language/messaging/tooltips.mdx
+++ b/docs/guidelines/language/messaging/tooltips.mdx
@@ -105,7 +105,7 @@ Avoid repeating text already visible and readable on the screen.
 ## Related
 
 * [Toast messages](./toast-messages.mdx)
-* [Infotips (component)](https://ix.siemens.io/docs/components/tooltip/code#a11y)
+* [Infotips (component)](../../../components/tooltip/code.mdx#a11y)
 * [Non-critical information messages](./non-critical-information-messages.mdx)
 * [Messages overview](./messages-overview.md)
 
