--- a/docs/components/empty-state/uxwriting.mdx
+++ b/docs/components/empty-state/uxwriting.mdx
@@ -4,6 +4,6 @@ doc-type: 'tab-item'
 
 import EmptyStateContent from '@site/docs/guidelines/language/messaging/empty-state-messages.mdx';
 
-# Empty State - UX Writing
+# Empty State - Language
 
 <EmptyStateContent />
